refactor: use of database interfaces
